“社区静态页面开发完，正在开发首页

--- a/app.json
+++ b/app.json
@@ -3,10 +3,12 @@
     "pages/index/index",
 
     "pages/home/home/home",
+    "pages/home/article/article",
     
     "pages/community/home/home",
     "pages/community/details/details",
     "pages/community/comments/comments",
+    "pages/community/edit/edit",
     
     "pages/play/home/home",
     "pages/play/register/register",
